# VTK-Denemeleri

./: ExtractVOI.py  PNGReader.py  README.md  cone.py  cube.py  cube1.py  cube2.py  log_output.txt  sphere.py  tetrahedron.py  triangle.py  vtkAxis.py  vtkCellPicker.py  vtkChartXY.py  vtkInformationKey.py  vtkLogger.py  vtkPicker.py
vtkBrush/: CMakeLists.txt  main.cpp
vtkCellPicker/: CMakeLists.txt  main.cpp
vtkContextItem/: CMakeLists.txt  main.cpp
